  * Rebase patch after landing of (bmo: 550293) aka plugin-crashed UI needs more
    user opt-in
    - update bz460917_att350845_reload_new_plugins.patch
  * Drop unnecessary patch to block updates since we disable updates in
    debian/rules
    - drop debian/patches/ubuntu_no_app_updates.patch
    - update debian/patches/series

  [ Jamie Strandboge <jamie@ubuntu.com> ]
  * add AppArmor profile (disabled by default)
    - debian/firefox-3.7.dirs: add etc/apparmor.d/disable
    - add debian/firefox-3.7.preinst.in: disable the profile on new installs,
      installs on Ubuntu 9.04 and earlier (requires abstractions only found
      in 9.10 and higher), installs where the last modified profile is
      disabled and upgrades to this version
    - debian/firefox-3.7.postinst.in: reload profile
    - add debian/firefox-3.7.postrm.in: cleanup force-complain and disable
      directories
    - add debian/usr.bin.firefox.apparmor.in
    - add debian/README.Debian.in with note about AppArmor
    - debian/apport/firefox-3.7.py: add AppArmor information if the profile is
      not disabled
    - debian/rules: install profile and update subst_files
    - debian/control: have firefox-3.7 Depends on lsb-release (needed in
      preinst)

  [ Benjamin Drung <bdrung@ubuntu.com> ]
  * Add metadata for mozilla-devscripts
    - update debian/control

 -- Micah Gersten <micahg@ubuntu.com>  Tue, 23 Mar 2010 23:21:25 -0500

firefox-3.7 (3.7~a2~hg20100212r38093+nobinonly-0ubuntu1) UNRELEASED; urgency=low

  [ Fabien Tassin ]
  * Mass update from 3.6 to 3.7
  * Drop libnkgnomevfs.so from firefox-3.7-gnome-support, it's already
    shippped in xulrunner-1.9.3-gnome-support (see bmo #512671)
    - update debian/firefox-3.7-gnome-support.install
  * Target the 'default' branch instead of tip
    - add debian/moz-rev.sh
    - update debian/mozclient/firefox-3.7.conf

  [ Micah Gersten ]
  * Add mesa-common-dev to build-depends after landing of configure test aka